# AI_NEWS_AGENTS

./: .env.example  .gitignore  AI_News_Agents_Guide.md  FACT_CHECKING_ENHANCEMENT.md  HOW_TO_CHECK.md  PUBLICATION_READY_GUIDE.md  README.md  final_cleanup.bat  pyproject.toml  report.md
news/: 2025-07-20_comprehensive_ai_news_report.md  2025-07-20_news_article.md  comprehensive_ai_news_report.md
src/ai_news_agents/: __init__.py  crew.py  main.py
src/ai_news_agents/config/: agents.yaml  tasks.yaml
src/ai_news_agents/tools/: __init__.py  fact_check_functions.py
