[project]
name = "ai-news-agents"
version = "0.1.0"
description = "AI News Agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
    "markdown>=3.8.2",
    "markdown-pdf>=1.7",
    "reportlab>=4.4.2",
    "weasyprint>=65.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
]

[project.scripts]
ai_news_agents = "ai_news_agents.main:run"
run_crew = "ai_news_agents.main:run"
train = "ai_news_agents.main:train"
replay = "ai_news_agents.main:replay"
test = "ai_news_agents.main:test"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_news_agents"]
include = ["src/ai_news_agents/config/*.yaml"]

[tool.hatch.build.targets.sdist]
include = ["src/ai_news_agents"]

[tool.crewai]
type = "crew"
